--- a/css/common.css
+++ b/css/common.css
@@ -24,6 +24,17 @@ button {
 }
 
 .gallery {
-  list-style: none;
   display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.gallery__item {
+  flex: 1;
+  margin: 10px;
+}
+
+.gallery__img {
+  height: 100%;
 }
